--- a/1-Python Basic/1.0-basic.ipynb
+++ b/1-Python Basic/1.0-basic.ipynb
@@ -72,6 +72,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an adult\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 25\n",
+    "\n",
+    "if age >= 18:\n",
+    "    print(\"You are an adult\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
